# aliexpress-sdk

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
aliexpress/: __init__.py
aliexpress/api/: __init__.py  base.py
aliexpress/api/rest/: AliexpressCategoryRedefiningGetallchildattributesresultRequest.py  AliexpressDataRedefiningQueryproductaddcartinfoeverydaybyidRequest.py  AliexpressDataRedefiningQueryproductbusinessinfobyidRequest.py  AliexpressDataRedefiningQueryproductfavoritedinfoeverydaybyidRequest.py  AliexpressFreightRedefiningGetfreightsettingbytemplatequeryRequest.py  AliexpressImageRedefiningUploadtempimageforsdkRequest.py  AliexpressIssueDetailGetRequest.py  AliexpressIssueImageUploadRequest.py  AliexpressIssueSolutionAgreeRequest.py  AliexpressIssueSolutionSaveRequest.py  AliexpressLogisticsGetpdfsbycloudprintRequest.py  AliexpressLogisticsQuerylogisticsorderdetailRequest.py  AliexpressLogisticsRedefiningGetallprovinceRequest.py  AliexpressLogisticsRedefiningGetnextleveladdressdataRequest.py  AliexpressLogisticsRedefiningGetonlinelogisticsinfoRequest.py  AliexpressLogisticsRedefiningGetprintinfoRequest.py  AliexpressLogisticsRedefiningGetprintinfosRequest.py  AliexpressLogisticsRedefiningQuerytrackingresultRequest.py  AliexpressLogisticsSellershipmentfortopRequest.py  AliexpressLogisticsSellershipmentsupportsubtradeorderRequest.py  AliexpressMarketingLimitdiscountpromotionEditRequest.py  AliexpressMarketingLimitdiscountpromotionproductEditRequest.py  AliexpressMarketingLimiteddiscountpromotionAddpromotionproductRequest.py  AliexpressMarketingRedefiningGetactlistRequest.py  AliexpressMarketingStorepromotionsListRequest.py  AliexpressMarketingStorepromotionsQuerybyproductRequest.py  AliexpressMerchantOverseaBrandGetRequest.py  AliexpressMerchantRedefiningQuerylevelinfoRequest.py  (+350 more)
aliexpress/scripts/: cli.py
tests/: test_aliexpress_api.py
(+51 files in other folders)
