[tool.poetry]
name = "aliexpress-sdk"
version = "0.1.1"
description = ""
authors = ["Nicholas Bayborodin <nicholas.bayborodin@gmail.com>"]
packages = [
    { include = "aliexpress" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aliexpress-cli = "aliexpress.scripts.cli:main"
